--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <script src="p5/addons/p5.dom.min.js"></script>
     <script src="p5/addons/p5.sound.min.js"></script>
     <script src="src/main.js"></script>
+    <style>
+      * {
+        background: #282828;
+        margin: 0;
+        padding: 0;
+      }
+
+      h1 {
+        font-family: monospace;
+        color: #ebdbb2;
+        transition: 0.5s all;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    </style>
   </head>
   <body>
+    <h1 onclick="start(this);">START</h1>
   </body>
 </html>
