--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="p5/p5.min.js"></script>
     <script src="p5/addons/p5.dom.min.js"></script>
     <script src="p5/addons/p5.sound.min.js"></script>
-    <script src="src/main.js"></script>
+	<script src="p5/addons/p5.tiledmap.min.js"></script>
+	<script src="src/main.js"></script>
     </style>
   </head>
 </html>
