--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 <script src="p5/addons/p5.sound.min.js"></script>
 <script src="p5/addons/p5.tiledmap.min.js"></script>
 
-<script src="assets/map.js"></script>
+<script src="assets/level/map.js"></script>
 <script src="src/mapview.js"></script>
